<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Vista.ShortsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp">

        <!-- Sección azul -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#0000FF"
            android:orientation="vertical">

            <TextView
                android:text="@string/PerfilTxt"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!-- Imagen del docente -->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@raw/perfil"/>
            <!-- Nombre del docente -->
            <TextView
                android:text="@string/NombreDato"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!-- Valor del docente -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:text="@string/ValorDato"
                        android:textSize="25dp"
                        android:textColor="#fff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@raw/estrella"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Sección blanca  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="top"
            android:background="#ffe4b5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="top"
                android:background="#fff">

            <TextView
                android:text="@string/DatoPersonalDato"
                android:textSize="25sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
                <!-- Linea Negra  -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NombreCDato"
                android:textSize="18sp"
                android:textColor="#000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CorreoDato"
                android:textSize="18sp"
                android:textColor="#000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CarreraDato"
                android:textSize="18sp"
                android:textColor="#000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UniDato"
                android:textSize="18sp"
                android:textColor="#000"/>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="top"
                android:layout_marginTop="10dp"
                android:background="#fff">

                <TextView
                    android:text="@string/AcercaDato"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <!-- Linea Negra  -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in"
                    android:textSize="18sp"
                    android:textColor="#000"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="top"
                android:layout_marginTop="10dp"
                android:background="#fff">

                <TextView
                    android:text="@string/CusoDato"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <!-- Linea Negra  -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in"
                    android:textSize="18sp"
                    android:textColor="#000"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="top"
                android:layout_marginTop="10dp"
                android:background="#fff">

                <TextView
                    android:text="@string/MetoDato"
                    android:textSize="25sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <!-- Linea Negra  -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in"
                    android:textSize="18sp"
                    android:textColor="#000"/>
                <!-- Validar botono  -->
            </LinearLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="13dp">
                <Button
                    android:text="@string/ResenaDato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
